Fix Firefox layout issues

--- a/src/ui/controls/button/style.less
+++ b/src/ui/controls/button/style.less
@@ -15,6 +15,7 @@
     padding: 0;
     text-align: center;
     transition: background-color @time-slow;
+    -moz-user-select: none;
     user-select: none;
 
     &:hover,
