--- a/src/ui/controls/toggle/style.less
+++ b/src/ui/controls/toggle/style.less
@@ -8,6 +8,8 @@
     display: inline-flex;
     height: @size-control-inner;
     position: relative;
+    -moz-user-select: none;
+    user-select: none;
 
     &__btn {
         align-items: center;
