--- a/src/ui/controls/updown/style.less
+++ b/src/ui/controls/updown/style.less
@@ -4,6 +4,7 @@
     align-items: stretch;
     display: flex;
     flex-direction: column;
+    -moz-user-select: none;
     user-select: none;
 
     &__line {
@@ -92,6 +93,7 @@
     justify-content: center;
     overflow: hidden;
     position: relative;
+    -moz-user-select: none;
     user-select: none;
 
     &__value {
