--- a/src/ui/popup/components/filter-settings/style.less
+++ b/src/ui/popup/components/filter-settings/style.less
@@ -15,6 +15,8 @@
     align-items: stretch;
     display: flex;
     flex-direction: column;
+    -moz-user-select: none;
+    user-select: none;
 
     &__line {
         display: flex;
