--- a/src/ui/popup/style.less
+++ b/src/ui/popup/style.less
@@ -6,7 +6,7 @@
 @popup-content-padding: 1rem;
 
 html {
-    padding: @popup-content-padding;
+    box-sizing: border-box;
 }
 
 @import "./components/filter-settings/style";
@@ -20,7 +20,7 @@ body {
     display: flex;
     flex-direction: column;
     height: @popup-content-height;
-    margin: 0;
+    margin: @popup-content-padding;
     width: @popup-content-width;
 
     > :not(:first-child) {
@@ -63,4 +63,10 @@ footer {
     .tab-panel__tab--active {
         pointer-events: none;
     }
+}
+
+.chromium-issue-750419 {
+    // Fix missing vertical borders in Chrome for Windows
+    border-left: 2px solid white;
+    border-right: 2px solid white;
 }
