--- a/src/ui/shared.less
+++ b/src/ui/shared.less
@@ -40,6 +40,11 @@ input, button {
     font-size: @size-text-normal;
 }
 
+::-moz-selection {
+    background-color: @color-selection-back;
+    color: @color-selection-fore;
+}
+
 ::selection {
     background-color: @color-selection-back;
     color: @color-selection-fore;
